# a320-cfm56-xp12

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
cmake/: CompilerOptions.cmake  FindXPLMSDK.cmake  plugin.version
config/: default_hardware_map.json  systems_config.json
docs/: architecture.md
src/core/: Config.cpp  Config.h  DataRefManager.cpp  DataRefManager.h  EventBus.h  FlightLoop.cpp  FlightLoop.h  Logger.cpp  Logger.h
src/debug/: DebugMenu.cpp  DebugMenu.h
src/network/: NetworkServer.cpp  NetworkServer.h  Protocol.h
src/plugin/: Plugin.cpp  Plugin.h
src/systems/ecam/: SDPages.cpp  SDPages.h
src/systems/electrical/: ACBus.cpp  ACBus.h  Battery.cpp  Battery.h  DCBus.cpp  DCBus.h  ElectricalEvents.h  ElectricalSystem.cpp  ElectricalSystem.h  Generator.cpp  Generator.h
src/systems/pneumatics/: AntiIce.cpp  AntiIce.h  BleedSource.cpp  BleedSource.h  Pack.cpp  Pack.h  PneumaticEvents.h  PneumaticSystem.cpp  PneumaticSystem.h  Pressurization.cpp  Pressurization.h
tests/unit/: test_config.cpp  test_electrical.cpp  test_eventbus.cpp  test_pneumatics.cpp
